# learning2023

./: CMakeLists.txt
DAY3/L1Q1/: main.c
DAY3/L1Q2/: main.c
DAY3/L2Q2/: main.c
Day1/L1Q1/: main.c
Day1/L1Q2/: main.c
Day1/L1Q3/: main.c
Day1/L1Q4/: main.c
Day1/L1Q5/: main.c
Day1/L2Q1/: main.c
Day1/L2Q2/: CMakeLists.txt  main.c
Day1/L2Q3/: main.c
Day1/L2Q4/: main.c
Day2/L1Q1/: main.c
Day2/L1Q2/: main.c
Day2/L1Q4/: main.c
Day2/L2Q1/: main.c
Day2/L2Q2/: main.c
Day2/L2Q3/: main.c
Day2/L2Q4/: main.c
Day2/L2Q5/: CMakeLists.txt  main.c
Day3/L1Q1/: CMakeLists.txt  main.c
Day3/L1Q2/: CMakeLists.txt
Day3/L1Q3/: main.c
Day3/L1Q4/: CMakeLists.txt  main.c
Day3/L2Q1/: CMakeLists.txt  main.c
Day4/Arrays/L1Q1/: main.c
Day4/Arrays/L1Q10/: CMakeLists.txt  main.c
Day4/Arrays/L1Q2/: main.c
Day4/Arrays/L1Q3/: CMakeLists.txt  main.c
Day4/Arrays/L1Q4/: main.c
Day4/Arrays/L1Q5/: main.c
Day4/Arrays/L1Q6/: main.c
Day4/Arrays/L1Q7/: CMakeLists.txt  main.c
Day4/Arrays/L1Q8/: CMakeLists.txt  main.c
Day4/Arrays/L1Q9/: CMakeLists.txt  main.c
Day4/Strings/L1Q1/: main.c
Day4/Strings/L1Q3/: main.c
Day4/Strings/L1Q4/: main.c
Day4/Strings/L1Q5/: CMakeLists.txt  main.c
Day4/Strings/L1Q6/: CMakeLists.txt  main.c
Day5/L1Q2/: CMakeLists.txt  main.c
Day5/L1Q3/: main.c
Day5/L1Q4/: main.c
Day5/L1Q5/: main.c
Day5/L2Q1/: main.c
Day5/L2Q2/: main.c
Day5/L2Q3/: main.c
Day5/L2Q4/: main.c
Day6/L1Q1/: main.c
Day6/L1Q2/: main.c
Day6/L1Q3/: main.c
Day6/L1Q4/: main.c
Day6/L1Q5/: main.c
Day6/L2Q1/: main.c
Day6/L2Q2/: main.c
Day6/L2Q3/: main.c
Day6/L2Q4/: CMakeLists.txt  main.c
Day7/L1Q1/: main.c
Day7/L1Q2/: main.c
Day7/L1Q3/: main.c
Day7/L2Q1/: main.c
Day7/L2Q2/: main.c
Day7/L2Q3/: CMakeLists.txt  main.c
